--- a/exercise-two/src/App.css
+++ b/exercise-two/src/App.css
@@ -1,22 +1,46 @@
-.App{
-  margin: 30px auto;
-  max-width: 1080px;
-  padding: 0 25px;
+.App {
+	margin: 30px auto;
+	max-width: 1080px;
+	padding: 0 25px;
 }
 
-.title{
-  text-align: center;
-  font-size:  48px;
-  font-weight: bolder;
+.nav {
+	margin: 0 100px;
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
 }
 
-.WeatherCard{
-  margin: 30px 100px;
-  border: 1.5px solid black;
-  border-radius: 8px;
-  padding: 0 30px;
+.city {
+	padding-right: 40px;
 }
 
-.text{
-  font-size: 20px;
+.title {
+	text-align: center;
+	font-size: 52px;
+	font-weight: bolder;
+}
+
+.WeatherCard {
+	margin: 30px 100px;
+	border: 1.5px solid black;
+	border-radius: 8px;
+	padding: 0 30px;
+}
+
+.text {
+	font-size: 18px;
+}
+
+.currentTemp {
+	text-align: center;
+	font-size: 22px;
+}
+
+.currentTempNumber {
+	margin-top: 15px;
+	margin-bottom: 30px;
+	text-align: center;
+	font-size: 48px;
+	font-weight: bold;
 }
