--- a/exercise-two/src/App.css
+++ b/exercise-two/src/App.css
@@ -1,28 +1,37 @@
 .App {
-	margin: 30px auto;
+	margin: 20px auto;
 	max-width: 1080px;
 	padding: 0 25px;
 }
 
-.nav {
-	margin: 0 100px;
+.navigation {
+	margin-top: 25px;
 	display: flex;
 	flex-direction: row;
 	justify-content: start;
 }
 
-.city {
+.navigation a {
+	color: black;
+	font-size: 18px;
 	padding-right: 40px;
+	font-weight: 500;
+}
+
+.navigation a.Active {
+	text-decoration: none;
+	font-weight: 600;
 }
 
 .title {
+	margin-top: 50px;
 	text-align: center;
 	font-size: 52px;
 	font-weight: bolder;
 }
 
 .WeatherCard {
-	margin: 30px 100px;
+	margin: 30px 80px;
 	border: 1.5px solid black;
 	border-radius: 8px;
 	padding: 0 30px;
@@ -32,15 +41,30 @@
 	font-size: 18px;
 }
 
+.tempWrapper{
+	display: flex;
+	justify-content: space-around;
+}
+
+.weatherImageWrapper {
+	display: flex;
+	justify-content: center;
+	font-size: 40px;
+	padding-bottom: 20px;
+	padding-top: 40px;
+}
+
 .currentTemp {
+	margin: 0;
 	text-align: center;
 	font-size: 22px;
 }
 
 .currentTempNumber {
-	margin-top: 15px;
-	margin-bottom: 30px;
+	margin: 0;
 	text-align: center;
-	font-size: 48px;
+	font-size: 80px;
 	font-weight: bold;
+	padding-top: 10px;
+	padding-bottom: 40px;
 }
